// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RasberryFudge page > renders the correct ingredients 1`] = `
<section
  class="mb-8 lg:mb-0"
  data-testid="INGREDIENT_LIST"
>
  <div>
     
  </div>
  <div
    class="flex flex-col"
  >
    <ul>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Vanilla vodka
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          4
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Rasberry purée
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          4
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Butterscotch liqeur (De Kuyper)
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          2
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Lime juice
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          2
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="--font-local font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Simple syrup (1:1 ratio)
          </p>
        </div>
        <p
          class="--font-local font-sans text-paragraph text-regular leading-paragraph "
        >
          2
          cl
        </p>
      </li>
    </ul>
  </div>
</section>
`;

exports[`RasberryFudge page renders the correct ingredients 1`] = `
<section
  class="mb-8 lg:mb-0"
  data-testid="INGREDIENT_LIST"
>
  <div>
     
  </div>
  <div
    class="flex flex-col"
  >
    <ul>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Vanilla vodka
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          4
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Rasberry purée
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          4
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Butterscotch liqeur (De Kuyper)
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          2
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Lime juice
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          2
          cl
        </p>
      </li>
      <li
        class="flex justify-between mb-1 transition-opacity "
      >
        <div
          class=""
        >
          <p
            class="variable font-sans text-paragraph text-regular leading-paragraph font-semibold"
          >
            Simple syrup (1:1 ratio)
          </p>
        </div>
        <p
          class="variable font-sans text-paragraph text-regular leading-paragraph "
        >
          2
          cl
        </p>
      </li>
    </ul>
  </div>
</section>
`;
